[project]
name = "wight-world"
version = "0.1.0"
description = "Natural selection through spatial 2D matrix convolutions"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "coremltools>=9.0",
    "numpy>=2.4.3",
    "pygame>=2.6.1",
]
